%% WebServ — class relationships (composition & interaction)
%% NOTE: there is NO inheritance in this project — the "hierarchy" is ownership.
%%   *--  = composition (owns / lifetime-controls)
%%   -->  = association  (holds a pointer/ref, does NOT own)
%%   ..>  = dependency   (uses / creates transiently)
%% Import into Miro: Create diagram -> Mermaid, then paste this whole file.
classDiagram
  direction LR

  class Server {
    -string _name
    -vector~Socket~ _sockets_vector
    -vector~Location~ _locations_vector
    -map~int,Client~ _clients
    -vector~pollfd~ _poll_fds
    -map~int,int~ _pipe_to_client
    +run(vector~Listener~&)
    +loopPollFds()
    +acceptNewClient(fd)
  }
  class Listener {
    -Socket _socket
    -vector~Server*~ _linked_servers_vector
    +getSocket() Socket&
    +getLinkedServers()
  }
  class Socket {
    -string _host
    -int _port
    -int _listen_fd
    +setSocket(port)
    +getSocketFd()
  }
  class Location {
    -string _root_path
    -string _index_path
    -bool _autoindex
    -int _return_error_code
  }
  class Client {
    -string _buffer_read
    -string _buffer_send
    -e_state_client _status
    -int _cgi_pipe_fd
    -pid_t _pid
    +Request _request
    +handleRecv()
    +handleSend()
  }
  class Request {
    -string method
    -string resource
    -map headers
    -string body
    -map cgi_env
    +parseRequest(raw)
    +isCGI()
  }
  class Response {
    -int _status_code
    -string _body
    -map _headers
    +build()
  }
  class Cgi {
    -vector~string~ _languagesSupported
    -Client* _client
    +run()
  }
  class Lexer {
    -vector~Token~ _tokens_vector
    +getTokenVector()
  }
  class Parser {
    -vector~Token~ _tokens_vector
    -vector~Server~& _servers_vector
    +initServers()
  }
  class Token {
    -string _value
    -token_type _type
    -int _line
  }

  %% ---- ownership (composition) ----
  Server "1" *-- "0..*" Socket : owns
  Server "1" *-- "0..*" Location : owns
  Server "1" *-- "0..*" Client : owns (map by fd)
  Listener "1" *-- "1" Socket : owns
  Client "1" *-- "1" Request : owns

  %% ---- associations (reference, no ownership) ----
  Listener "1..*" --> "1..*" Server : links (virtual hosts)
  Cgi --> Client : points to

  %% ---- dependencies (uses / creates) ----
  Server ..> Listener : run(listeners&)
  Server ..> Response : builds
  Server ..> Cgi : launches
  Client ..> Response : builds
  Client ..> Cgi : launches
  Response ..> Request : reads
  Cgi ..> Request : reads cgi_env

  %% ---- config pipeline ----
  Lexer ..> Token : produces
  Parser o-- Token : consumes
  Parser ..> Server : builds
  Parser ..> Socket : builds
  Parser ..> Location : builds
